manifests/flask-api/flask_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: flask-api
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: NodePort
