manifests/flask-api/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-api-ingress
  namespace: flask-api
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - api.henrique.local
    secretName: flask-api-tls
  rules:
  - host: api.henrique.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask-api-service
            port:
              number: 80
